made calculation feature, fixed text overflow

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: roboto, sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: row;
@@ -9,7 +10,7 @@ body {
 .calculator-box {
   height: 700px;
   width: 400px;
-  padding: 16px;
+  padding: 30px;
   background-color: #333;
   display: flex;
   flex-wrap: wrap;
@@ -19,7 +20,7 @@ body {
 }
 
 #calculator-screen {
- height: 20%;
+ min-height: 20%;
  width: 100%;
  background-color: #77b;
  border-radius: 8px;
@@ -27,6 +28,10 @@ body {
  display: flex;
  align-items: center;
  padding-left: 16px;
+ word-wrap: break-word;
+ overflow-wrap: break-word;
+ word-break: break-all;
+ word-break: break-word;
 }
 
 .calculator-box button {
